
  Fix bug 852217 - sample interval jumps after I set it. Thanks to
  Danny Faught for the report.

  Fix/enhance the TCPProxy's support for chained HTTPS proxies. This
  should now work with a wider range of proxies.

  Improved console error handling.

  Fix bug 852298 - null pointer exception when multicast fails. Thanks
  to Danny Faught for the report.


Grinder 3.0-beta14
------------------

  Hack HTTPClient to provide a tentative fix to the "premature EOF"
  problem. This widely reported problem occurs when a server times out
  and closes a connection, after which writes to the connection
  silently fail and we don't learn about the problem until we read
  from the connection.

  Clean up the Jython interpreter correctly so that scripts can use
  exit functions. (See the standard Python atexit module).

  Guarantee that the TestRunner __del__ call is called on shutdown so
  that scripts can use it to tidy up per-thread state. Thanks to
  Stefano Santoro for inspiration.

  Add a new HTTPPluginTCPProxyFilter from Bertrand Ave. This is
  currently undocumented and should be considered beta, but is more
  feature rich than the default HTTPPluginTCPProxyFilter. Over time it
  is likely to become the default HTTPPlugin filter. If you'd like to
  try it out, you'll need to start the TCPProxy with "-requestFilter
  net.grinder.plugin.http.HTTPPluginTCPProxyFilter2 -responseFilter
  net.grinder.plugin.http.HTTPPluginTCPProxyReponseFilter". You'll
  also need the WebUtils Python module that can be found in
  contrib/httpplugin.

  Fix bug 850939 - dead link in documentation. Thanks to Danny Faught
  for the report.


Grinder 3.0-beta13
------------------

  Fix bug 847571 - console does not display image icons. Thanks to
  Stefano Santoro for the report.


Grinder 3.0-beta12
------------------

  Updates to the TCPProxy from Bertrand Ave:

   - Added a "-console" switch. When used, the TCPProxy creates a