@@ -69,9 +69,6 @@ Request 801129).
 
 Consider forcing TestRunner to be registered with grinder.
 
-Add option so that old log files are copied rather than deleted. Make
-it the default.
-
 ** Communication
 
 Consider an alternative to multicast for console->worker
