@@ -1,8 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<html>
-<body>
-
-
-</body>
-</html>
